[project]
name = "fingerprint_server_sdk"
version = "9.4.0"
description = "Fingerprint Server API allows you to get, search, and update Events in a server environment. It can be used for data exports, decision-making, and data analysis scenarios. Server API is intended for server-side usage, it's not intended to be used from the client side, whether it's a browser or a mobile device. The API also supports collection of Automation Intelligence for requests to your server in edge, pre-origin, or middleware contexts. "
authors = [
  {name = "Fingerprint Support",email = "support@fingerprint.com"},
]
license = { text = "MIT" }
readme = "README.pypi.md"
keywords = ["OpenAPI", "OpenAPI-Generator", "Server API"]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
]

dependencies = [
  "urllib3 (>=2.1.0,<3.0.0)",
  "python-dateutil (>=2.8.2)",
  "pydantic (>=2)",
  "typing-extensions (>=4.7.1)",
  "cryptography (>=46.0.5)"
]

[project.optional-dependencies]
examples = ["python-dotenv (>=1.0.0)"]

[project.urls]
Repository = "https://github.com/fingerprintjs/python-sdk"

[dependency-groups]
dev = [
  "pytest>=7.2.1",
  "pytest-cov>=2.8.1",
  "types-python-dateutil>=2.8.19.14",
  "mypy>=1.5",
  "ruff==0.15.20",
  "pre-commit>=4.0.0",
  "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.mypy]
files = [
  "fingerprint_server_sdk",
  "test",
]

strict = true

# List from: https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
  "fingerprint_server_sdk.configuration",
]
warn_unused_ignores = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # Pyflakes
  "I",      # isort
  "UP",     # pyupgrade
  "B",      # flake8-bugbear
  "SIM",    # flake8-simplify
]
# UP007/UP045 require Python 3.10+, we target Python 3.9+
# SIM108: ternary operators can reduce readability for longer expressions
ignore = ["UP007", "UP045", "SIM108"]

[tool.ruff.lint.per-file-ignores]
# Generated files have long descriptions from OpenAPI spec
"fingerprint_server_sdk/models/*" = ["E501"]
"fingerprint_server_sdk/api/*" = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"